# D2RMH

./: .gitignore  CMakeLists.txt  ChangeLog  ChangeLog.md  LICENSE  README.md  TODO.md  build_msvc2019.bat  build_msvc2022.bat  build_msys2_clang.bat  build_msys2_mingw.bat  copy_dist.bat
.github/workflows/: build.yml
cmake/: CustomCompilerOptions.cmake  GetVersion.cmake
common/: CMakeLists.txt  jsonlng.cpp  jsonlng.h  viewstream.h
contrib/: D2RMH_CN.ini  README_CN.md
contrib/plugins/: chicken_life.lua
contrib/zhCN/: D2RMH.ini  README.md
contrib/zhCN/plugins/: town_portal_check.lua
d2mapapi/: .gitrepo  CMakeLists.txt  LICENSE  README.md  collisionmap.cpp  collisionmap.h  crc32.h  d2map.cpp  d2map.h  d2ptrs.h  d2structs.h  genimage.cpp  host.cpp  httpd.cpp  mapdata.cpp  mapdata.h  offset.cpp  offset.h  pathfinder.cpp  pathfinder.h  piped.cpp  pipehost.cpp  pipehost.h  session.cpp  session.h
d2mapapi/json/: json.hpp
d2mapapi/simphttp/: CMakeLists.txt  simphttp.cpp  simphttp.h  uri.h
d2mapapi/simphttp/cmake/: FindLibUV.cmake
d2mapapi/simphttp/llhttp/: CMakeLists.txt
doc/: ChangeLog.md  ItemDesc.csv  ItemDesc.md  KeyMapping.md  Plugin.md  Skill.md  TODO.md
inih/: CMakeLists.txt
src/: CMakeLists.txt  D2RMH.manifest  cfg.cpp  cfg.h  d2rdefs.h  d2rprocess.cpp  d2rprocess.h  d2txt.cpp  d2txt.h  data.cpp  data.h  jsonlng.cpp  jsonlng.h  main.cpp  manifest.rc  maprenderer.cpp  maprenderer.h  ntdll.def  ntprocess.cpp  ntprocess.h  os_structs.cpp  os_structs.h  plugin.cpp  plugin.h  renderer.cpp  renderer.h  res.rc  ttf.cpp  ttf.h  ttfgl.cpp  ttfgl.h  util.cpp  util.h  viewstream.h  window.cpp  window.h  wow64_process.cpp  wow64_process.h
src/d2r/: d2rdefs.h  mapstructs.h  processdata.cpp  processdata.h  processmanager.cpp  processmanager.h  storage.cpp  storage.h  stringdefs.inl
src/data/: d2txt.cpp  d2txt.h  gamedata.cpp  gamedata.h
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad_wgl.h
src/glad/src/: glad.c  glad_wgl.c
src/json/: json.hpp
src/plugin/: plugin.cpp  plugin.h
src/render/: d2font.cpp  d2font.h  font.cpp  font.h  fontrenderimpl.h  renderer.cpp  renderer.h  ttf.cpp  ttf.h  ttfgl.cpp  ttfgl.h
src/res/: res.rc
src/sokol/: README.md  fontstash.h
src/tray/: tray.h
src/ui/: configdlg.cpp  configdlg.h  maprenderer.cpp  maprenderer.h  window.cpp  window.h
src/util/: ntprocess.cpp  ntprocess.h  os_structs.h  util.cpp  util.h
tools/: CMakeLists.txt  convert_d2hackmap_cfg.py  gendata.cpp  gendata.ini
tools/CascLib/: CMakeLists.txt
